# Project-Tanager

./: .editorconfig  .gitignore  .markdownlint.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FAQ.md  NOTICES.md  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: community-support.yml  config.yml  engineering-issue.yml
.github/workflows/: deploy.yml  on-issue-opened.yml  test-deploy.yml
POC-Applications/: POC-Applications.sln
POC-Applications/JsonSchemaShredder/: JsonSchemaShredder.csproj  JsonSchemaShredder.sln  PostgreSQLNaming.cs  Program.cs  README.md  SchemaShredder.cs  example-schema.json  example-schema.sql
POC-Applications/JsonSchemaShredder.Tests/: DbEntityNameTests.cs  JsonSchemaShredder.Tests.csproj  SchemaShredderTests.cs  UnitTest1.cs
POC-Applications/POC.Databases/: DMS.PERFORMANCE.md  ODSAPI.PERFORMANCE.md  POC.Databases.csproj  Program.cs  README.md
docs/: AUTH.md  CONFIGURATION.md  DMS-FEATURES.md  LOGGING.md  OPERATIONS.md  PLUGIN.md  README.md  docusaurus.config.js  package-lock.json  package.json
docs/CMS/: README.md
docs/CS/: CLAIMSET-MGMT.md  CS-AUTH.md  IDENTITY-PROVIDERS.md  README.md  SECRET-MANAGEMENT.md  sis-vendor-claimset.json
docs/DMS/: API-RESPONSE-METADATA.md  CACHE-DESIGN.md  CASCADING-UPDATES.md  CDC-STREAMING.md  CONFIGURATION.md  DATA-STORAGE-SCHEMA-GEN.md  DMS-AUTH.md  DOCUMENT-AUTHORIZATION.md  PRIMARY-DATA-STORAGE-alternatives.md  PRIMARY-DATA-STORAGE.md  PROFILES.md  README.md  REFERENTIAL-INTEGRITY.md  RESILIENCE.md  RESOURCES-API.md  SEARCH-DATABASE.md  SWAGGER.md  VALIDATION.md
images/: Project Tanager.drawio
pages/: README.md  docusaurus.config.js
showcase/: README.md
showcase/json-validator.Tests.Unit/: JsonValidationServiceTests.cs  (+1 more)
showcase/streaming/proton/: DMS-demonstration.http  README.md  echo_count_of_schools.py  pyproject.toml  requirements.txt  validate_school_edOrgCategory.py
testing/performance/: README.md  data-load.py  dms.ps1  houston-sized-isd.ps1  odsapi.ps1  odsapi.py  perf-analysis.ipynb  perf-test-commands.http  pyproject.toml  stuff-and-retrieve-data.ps1
testing/performance/2025-04-21/: README.md
testing/performance/large-reads/: .env.example  README.md  analysis.ipynb  docker-compose.yml  large-read.py  pyproject.toml  run.ps1
testing/performance/ods-api/: .env.example  bootstrap.sql  docker-compose.yml  run.ps1
testing/performance/py/: pyproject.toml  stuff-and-retrieve-data.py
(+127 files in other folders)
