[tool.poetry]
name = "tanager-perf-test"
version = "0.1.0"
description = ""
authors = ["Ed-Fi Alliance, LLC"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.16"
asyncio = "^3.4.3"
plotnine = "^0.14.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
