[tool.poetry]
name = "tanager-perf-test"
version = "0.1.0"
description = ""
authors = ["Ed-Fi Alliance, LLC"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.13.3"
asyncio = "^3.4.3"
plotnine = "^0.14.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
psycopg2 = "^2.9.10"
pyodbc = "^5.2.0"
dotenv = "^0.9.9"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
