[tool.poetry]
name = "proton-realtime-client"
version = "0.1.0"
description = "POC client interacting with Kafka via the Proton Python Driver"
authors = ["Ed-Fi Alliance, LLC and contributors"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
proton-driver = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
